video/stunner/gateway-class.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: stunner
spec:
  controllerName: stunner.l7mp.io/gateway-operator
  parametersRef:
    group: stunner.l7mp.io
    kind: GatewayConfig
    name: main
    namespace: stunner
  description: "STUNner is a WebRTC media gateway for Kubernetes"
