video/stunner/stunner.yaml
---
# Source: stunner-gateway-operator/templates/stunner-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stunner-auth
  namespace: stunner
  labels:
    app: stunner-auth
spec:
  selector:
    app: stunner-auth
  ports:
    - name: stunner-auth-server
      port: 8088
  type: ClusterIP
---
# Source: stunner-gateway-operator/templates/stunner-gateway-operator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: stunner-gateway-operator-controller-manager
  name: stunner-gateway-operator-controller-manager-metrics-service
  namespace: stunner
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    control-plane: stunner-gateway-operator-controller-manager
---
# Source: stunner-gateway-operator/templates/stunner-gateway-operator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    stunner.l7mp.io/config-discovery-service: "true"
  name: stunner-config-discovery
  namespace: stunner
spec:
  ports:
  - name: cds
    port: 13478
    protocol: TCP
  selector:
    control-plane: stunner-gateway-operator-controller-manager
---
# Source: stunner-gateway-operator/templates/stunner-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stunner-auth
  namespace: stunner
  labels:
    app: stunner-auth
spec:
  selector:
    matchLabels:
      app: stunner-auth
  replicas: 1
  template:
    metadata:
      labels:
        app: stunner-auth
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: stunner-auth-server
          image: "docker.io/l7mp/stunner-auth-server:0.21.0"
          imagePullPolicy: Always
          command: [ "./authd" ]
          args:
          - --cds-server-address=stunner-config-discovery.stunner.svc
          -  --port=8088
          -  -v
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        []
---
# Source: stunner-gateway-operator/templates/stunner-gateway-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: stunner-gateway-operator-controller-manager
  name: stunner-gateway-operator-controller-manager
  namespace: stunner
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: stunner-gateway-operator-controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        control-plane: stunner-gateway-operator-controller-manager
        stunner.l7mp.io/config-discovery-service: enabled
    spec:
      containers:
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=0
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.11.0
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
      - args:
        -  --health-probe-bind-address=:8081
        -  --metrics-bind-address=127.0.0.1:8080
        -  --leader-elect
        -  --zap-log-level=info
        -  --dataplane-mode=managed
        command:
        - /manager
        image: "docker.io/l7mp/stunner-gateway-operator:0.21.0"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        name: manager
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 128Mi
        ports:
        - containerPort: 13478
          name: cds
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
      securityContext:
        runAsNonRoot: true
      serviceAccountName: stunner-gateway-operator-controller-manager
      serviceAccount: stunner-gateway-operator-controller-manager
      terminationGracePeriodSeconds: 10
      nodeSelector:
        kubernetes.io/os: linux
