video/stunner/gateway-test.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-test
spec:
  gatewayClassName: stunner
  listeners:
  - name: udp
    port: 3478
    protocol: TURN-UDP
